--- a/react_project/experiment-3.1/src/index.css
+++ b/react_project/experiment-3.1/src/index.css
@@ -72,7 +72,7 @@ button:focus-visible {
   padding: 16px;
   max-width: 300px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  background-color:blue;
+  background-color:rgb(66, 66, 141);
   display: flex;
   flex-direction: column;
   gap: 8px;
